complete the header section with mobile responsive

--- a/index.html
+++ b/index.html
@@ -8,6 +8,31 @@
     <title>MY Team</title>
 </head>
 <body>
+    <header>
+        <div class="header-container">
+            <div>
+                <h2 class="header-maintext">
+                    The creative crew
+                </h2>
+            </div>
+            <div class="header-content">
+                <h5 class="header-who">
+                    who we are
+                </h5>
+                <p class="header-description">
+                   We are team of creatively diverse. driven. innovative individuals working in various loacations from  the world. 
+                </p>
+            </div>
+        </div>
+    </header>
+
+    <main>
+
+    </main>
+
+    <footer>
+
+    </footer>
     
 </body>
 </html>
