--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,8 +8,9 @@
     <link rel="stylesheet" href="styles/responsive.css">
     <title>MY Team</title>
 </head>
+
 <body>
-    <header>
+    <header class="header">
         <div class="header-container">
             <div>
                 <h2 class="header-maintext">
@@ -20,7 +22,8 @@
                     who we are
                 </h5>
                 <p class="header-description">
-                   We are team of creatively diverse. driven. innovative individuals working in various loacations from  the world. 
+                    We are team of creatively diverse. driven. innovative individuals working in various loacations from
+                    the world.
                 </p>
             </div>
         </div>
@@ -28,11 +31,92 @@
 
     <main>
 
+        <section class="crew">
+            <div class="crew-container">
+                <!-- pic 01 -->
+                <div class="crew-group">
+                    <div class="crew-01">
+                        <img src="images/photo1.png" alt="">
+                        <div class="crew-desg">
+                            <p>Porduct Owner</p>
+                        </div>
+                    </div>
+                    <h3>Bill Mathy</h3>
+                </div>
+                <!-- pic 01 -->
+
+                <!-- pic 02 -->
+                <div class="crew-group middle-img">
+                    <div class="crew-01 ">
+                        <img src="images/photo2.png" alt="">
+                        <div class="crew-desg">
+                            <p>Shae Le</p>
+                        </div>
+                    </div>
+                    <h3>Saba Cabrera</h3>
+                </div>
+                <!-- pic 02 -->
+
+                <!-- pic 03 -->
+                <div class="crew-group">
+                    <div class="crew-01">
+                        <img src="images/photo3.png" alt="">
+                        <div class="crew-desg">
+                            <p>Tech Lead</p>
+                        </div>
+                    </div>
+                    <h3>Shae Le</h3>
+                </div>
+                <!-- pic 03 -->
+
+                
+                <!-- pic 04 -->
+                <div class="crew-group">
+                    <div class="crew-01">
+                        <img src="images/photo4.png" alt="">
+                        <div class="crew-desg">
+                            <p>UX Designer</p>
+                        </div>
+                    </div>
+                    <h3>Skylah Lu</h3>
+                </div>
+                <!-- pic 04 -->
+
+                <!-- pic 05 -->
+                <div class="crew-group middle-img">
+                    <div class="crew-01 ">
+                        <img src="images/photo5.png" alt="">
+                        <div class="crew-desg">
+                            <p>UX Designer</p>
+                        </div>
+                    </div>
+                    <h3>Griff Richards</h3>
+                </div>
+                <!-- pic 05 -->
+
+                <!-- pic 06 -->
+                <div class="crew-group">
+                    <div class="crew-01">
+                        <img src="images/photo6.png" alt="">
+                        <div class="crew-desg">
+                            <p>Deverloper</p>
+                        </div>
+                    </div>
+                    <h3>Stan John</h3>
+                </div>
+                <!-- pic 06 -->
+            </div>
+        </section>
+
+
     </main>
 
     <footer>
-
+        <p>
+            created by Tayeb.idev - devchallenges.io
+        </p>
     </footer>
-    
+
 </body>
+
 </html>
